# ppx_record_array

./: .gitignore  .ocamlformat  Readme.md  dune-project  ppx_record_array.opam
ppx/: dune  ppx_record_array.ml
test/: dune  main.ml
