opam-version: "2.0"
maintainer: "Larry Darryl Lee Jr."
authors: [
  "Larry Darryl Lee Jr."
]
synopsis: "PPX for converting records into arrays and vice versa"
description: """
Defines a PPX that converts records into arrays and vice versa.
"""
license: "GPL-3.0-or-later"
tags: []
homepage: "https://github.com/llee454/ppx_record_array"
doc: "https://github.com/llee454/ppx_record_array"
bug-reports: "https://github.com/llee454/ppx_record_array/issues"
depends: [
  "ocaml"
  "dune"
  "ocaml-lsp-server"
  "ocamlformat"
  "ppx_jane"
  "core_kernel"
  "core"
  "lwt"
  "lwt_ppx"
  "ppx_blob"
  "uuidm"
  "yojson"
  "ppx_deriving_yojson"
  "ocaml-compiler-libs"
]
build: ["dune" "build" "-p" name "-j" jobs]